--- a/Blink.ioc
+++ b/Blink.ioc
@@ -7,7 +7,8 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP5=TIM14
+Mcu.IPNb=6
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA0
@@ -15,6 +16,7 @@ Mcu.Pin1=PA1
 Mcu.Pin10=PA10
 Mcu.Pin11=PA13
 Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
@@ -23,7 +25,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB1
 Mcu.Pin9=PA9
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
 MxCube.Version=4.23.0
@@ -35,6 +37,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM14_IRQn=true\:0\:0\:false\:true\:true\:3\:true
 PA0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0.GPIO_Label=btn1_irq
 PA0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -116,7 +119,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI1_Init-SPI1-false-HAL,4-MX_I2C1_Init-I2C1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI1_Init-SPI1-false-HAL,4-MX_I2C1_Init-I2C1-false-HAL,5-MX_TIM14_Init-TIM14-false-HAL
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -146,6 +149,11 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM14.IPParameters=Period,Prescaler
+TIM14.Period=5000
+TIM14.Prescaler=4800
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=Blink
